fix alignment for index and show page css 3

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -575,7 +575,7 @@ div a {
 	margin-bottom: 2em;
 	padding: 1em 0 2em 0;
 	border-top: 1px solid black;
-	border-bottom: 2px solid black;
+	border-bottom: 1px solid black;
 	display: flex;
 	align-items: flex-start;
 }
